# warpx-encode

./: .gitignore  README.md  test-substrate.py
app/: README.md
private-tx-demo/private-tx/: Cargo.toml  README.md
private-tx-demo/private-tx/host/src/: main.rs
private-tx-demo/private-tx/methods/spend-proof/: Cargo.toml
private-tx-demo/private-tx/methods/spend-proof/src/: main.rs
private-tx-demo/private-tx/methods/src/: lib.rs
private-tx-demo/private-tx/prover/: Cargo.toml
private-tx-demo/private-tx/prover/host/: Cargo.toml  note_commitment_receipt.cbor  spend_proof_receipt.cbor  verification_input.json
private-tx-demo/private-tx/prover/host/src/: main.rs
private-tx-demo/private-tx/prover/methods/: Cargo.toml
private-tx-demo/private-tx/prover/methods/note-commitment/: Cargo.toml
private-tx-demo/private-tx/prover/methods/note-commitment/src/: main.rs
private-tx-demo/private-tx/prover/methods/spend-proof/src/: main.rs
private-tx-demo/private-tx/src/: lib.rs
private-tx-demo/private-tx/verifier/: Cargo.toml
private-tx-demo/private-tx/verifier/src/: main.rs
runtime/: Cargo.toml  README.md  zombienet.toml
runtime/node/: Cargo.toml
runtime/node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
runtime/pallets/hybrid-orderbook/: Cargo.toml  README.md
runtime/pallets/hybrid-orderbook/ops/src/: lib.rs
runtime/pallets/hybrid-orderbook/src/: critbit.rs  lib.rs  mock.rs  swap.rs  tests.rs  types.rs
runtime/runtime/: Cargo.toml
runtime/runtime/src/: apis.rs  lib.rs
runtime/runtime/src/configs/: mod.rs  xcm_config.rs
runtime/runtime/src/weights/: mod.rs
