[workspace]
members = [
    "prover",
    "verifier",
    "prover/methods",
    "prover/host",
    "prover/methods/note-commitment",
    "prover/methods/spend-proof",
]

[workspace.dependencies]
risc0-zkvm = { version = "^2.0.1" }
risc0-verifier = { git = "https://github.com/zkVerify/risc0-verifier.git", tag = "v0.6.0" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
serde_json = "1.0"
ciborium = "0.2.1"
clap = { version = "4.4", features = ["derive"] }
bytemuck = "1.14"
sha2 = "0.10.8"

[package]
name = "private-tx"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.release]
debug = 1
lto = true
