[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ciborium = { workspace = true }
tracing-subscriber = { workspace = true }
bytemuck = { workspace = true }
clap = { version = "4.4", features = ["derive"] }
bincode = "1.3"
methods = { path = "../methods" }
sha2 = { workspace = true }

[[bin]]
name = "host"