[package]
name = "methods"
version = "0.1.0"
edition = "2021"

[build-dependencies]
risc0-build = { version = "^2.1.0" }

[package.metadata.risc0]
methods = ["note-commitment", "spend-proof"]

[dependencies]
risc0-zkvm = { workspace = true }
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
